@startuml

title __1.0's Class Diagram__\n

  package  {
    package money {
      package money.impl {
        class Bill {
        }
      }
    }
  }
  

  package  {
    package money {
      package money.impl {
        class Coin {
        }
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class Coke {
        }
      }
    }
  }
  

  package  {
    class CommandDispatcher {
    }
  }
  

  package  {
    package exception {
      class CurrencyNotSupportedException {
      }
    }
  }
  

  package  {
    package exception {
      class InsufficientChangeException {
      }
    }
  }
  

  package  {
    package exception {
      class InsufficientFundsException {
      }
    }
  }
  

  package  {
    package money {
      package money.impl {
        class Money {
        }
      }
    }
  }
  

  package  {
    package money {
      interface MoneyManager {
      }
    }
  }
  

  package  {
    package money {
      package money.impl {
        class MoneyManagerImpl {
        }
      }
    }
  }
  

  package  {
    package sale {
      package sale.impl {
        class Order {
        }
      }
    }
  }
  

  package  {
    package exception {
      class OutOfStockException {
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class Pepsi {
        }
      }
    }
  }
  

  package  {
    package product {
      interface Product {
      }
    }
  }
  

  package  {
    package product {
      interface ProductManager {
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class ProductManagerImpl {
        }
      }
    }
  }
  

  package  {
    package money {
      interface USCurrency {
      }
    }
  }
  

  package  {
    package exception {
      class UnidentifiedCurrencyException {
      }
    }
  }
  

  package  {
    package sale {
      package sale.impl {
        class VendingMachineImpl {
        }
      }
    }
  }
  

  package  {
    class VendingMachineRunner {
    }
  }
  

  package  {
    package sale {
      interface VendingMchine {
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class Water {
        }
      }
    }
  }
  

  Bill -up-|> USCurrency
  Coin -up-|> USCurrency
  Coke -up-|> Product
  MoneyManagerImpl -up-|> MoneyManager
  Order o-- OrderState : currentState
  Pepsi -up-|> Product
  ProductManagerImpl -up-|> ProductManager
  VendingMachineImpl -up-|> VendingMchine
  VendingMachineImpl o-- Order : order
  VendingMachineImpl o-- ProductManagerImpl : productManager
  VendingMachineImpl o-- MoneyManagerImpl : moneyManager
  Water -up-|> Product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
